[gd_scene load_steps=12 format=2]

[ext_resource path="res://Model/buttons/EditButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Xolonium_48.tres" type="DynamicFont" id=2]
[ext_resource path="res://View/basicMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Model/buttons/DeleteButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Control/interface/CustomQuizModePreview.gd" type="Script" id=5]
[ext_resource path="res://Model/Labels/PlayWithBorders.tscn" type="PackedScene" id=6]
[ext_resource path="res://Xolonium_32.tres" type="DynamicFont" id=7]
[ext_resource path="res://Model/buttons/ShareButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://Model/buttons/FBButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://Model/buttons/WhatsappButton.tscn" type="PackedScene" id=10]
[ext_resource path="res://Model/buttons/RedditButton.tscn" type="PackedScene" id=11]

[node name="World" instance=ExtResource( 3 )]
script = ExtResource( 5 )

[node name="Header" parent="TemplateScreen" index="3"]
margin_left = 351.102
margin_top = 23.5869
margin_right = -536906.0
margin_bottom = 92.5869
text = "CUSTOM MODE"

[node name="PlayBoard" parent="." index="1"]
margin_top = 91.0

[node name="MarginContainer" type="MarginContainer" parent="PlayBoard" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PlayBoard/MarginContainer" index="0"]
margin_left = 20.0
margin_top = 20.0
margin_right = 559.0
margin_bottom = 432.0
custom_constants/separation = 10

[node name="QuizName" type="Label" parent="PlayBoard/MarginContainer/VBoxContainer" index="0"]
margin_right = 539.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 2 )
text = "Loading..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AuthorRow" type="HBoxContainer" parent="PlayBoard/MarginContainer/VBoxContainer" index="1"]
margin_top = 70.0
margin_right = 539.0
margin_bottom = 109.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Lefts" type="Label" parent="PlayBoard/MarginContainer/VBoxContainer/AuthorRow" index="0"]
margin_right = 64.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 7 )
text = "By: "

[node name="AuthorName" type="Label" parent="PlayBoard/MarginContainer/VBoxContainer/AuthorRow" index="1"]
margin_left = 68.0
margin_right = 232.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 7 )
text = "Loading..."

[node name="CreationDateRow" type="HBoxContainer" parent="PlayBoard/MarginContainer/VBoxContainer" index="2"]
margin_top = 119.0
margin_right = 539.0
margin_bottom = 158.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Lefts" type="Label" parent="PlayBoard/MarginContainer/VBoxContainer/CreationDateRow" index="0"]
margin_right = 150.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 7 )
text = "Created: "

[node name="CreationDate" type="Label" parent="PlayBoard/MarginContainer/VBoxContainer/CreationDateRow" index="1"]
margin_left = 154.0
margin_right = 318.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 7 )
text = "Loading..."

[node name="NumberQnsRow" type="HBoxContainer" parent="PlayBoard/MarginContainer/VBoxContainer" index="3"]
margin_top = 168.0
margin_right = 539.0
margin_bottom = 207.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Lefts" type="Label" parent="PlayBoard/MarginContainer/VBoxContainer/NumberQnsRow" index="0"]
margin_right = 165.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 7 )
text = "# of Qns: "

[node name="NumberOfQns" type="Label" parent="PlayBoard/MarginContainer/VBoxContainer/NumberQnsRow" index="1"]
margin_left = 169.0
margin_right = 333.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 7 )
text = "Loading..."

[node name="WorldsRow" type="HBoxContainer" parent="PlayBoard/MarginContainer/VBoxContainer" index="4"]
margin_top = 217.0
margin_right = 539.0
margin_bottom = 256.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Lefts" type="Label" parent="PlayBoard/MarginContainer/VBoxContainer/WorldsRow" index="0"]
margin_right = 139.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 7 )
text = "Worlds: "

[node name="Worlds" type="Label" parent="PlayBoard/MarginContainer/VBoxContainer/WorldsRow" index="1"]
margin_left = 143.0
margin_right = 307.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 7 )
text = "Loading..."

[node name="IdRow" type="HBoxContainer" parent="PlayBoard/MarginContainer/VBoxContainer" index="5"]
margin_top = 266.0
margin_right = 539.0
margin_bottom = 305.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Lefts" type="Label" parent="PlayBoard/MarginContainer/VBoxContainer/IdRow" index="0"]
margin_right = 49.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 7 )
text = "id: "

[node name="Id" type="Label" parent="PlayBoard/MarginContainer/VBoxContainer/IdRow" index="1"]
margin_left = 53.0
margin_right = 217.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 7 )
text = "Loading..."

[node name="Button" parent="PlayBoard/MarginContainer/VBoxContainer" index="6" instance=ExtResource( 6 )]
visible = false
margin_top = 315.0
margin_right = 539.0
margin_bottom = 405.0

[node name="EditButton" parent="." index="3" instance=ExtResource( 1 )]
margin_left = 890.106
margin_top = 497.291
margin_right = 992.106
margin_bottom = 585.291

[node name="HTTPRequest" type="HTTPRequest" parent="." index="4"]

[node name="DeleteButton" parent="." index="5" instance=ExtResource( 4 )]
margin_left = 891.214
margin_top = 399.784
margin_right = 993.214
margin_bottom = 487.784

[node name="ShareButton" parent="." index="6" instance=ExtResource( 8 )]
margin_left = 32.4879
margin_top = 385.38
margin_right = 134.488
margin_bottom = 473.38

[node name="FBButton" parent="." index="7" instance=ExtResource( 9 )]
margin_left = 34.704
margin_top = 284.548
margin_right = 136.704
margin_bottom = 372.548

[node name="WAButton" parent="." index="8" instance=ExtResource( 10 )]
margin_left = 39.1361
margin_top = 184.826
margin_right = 141.136
margin_bottom = 272.826

[node name="RedditButton" parent="." index="9" instance=ExtResource( 11 )]
margin_left = 42.8152
margin_top = 77.1302
margin_right = 144.815
margin_bottom = 165.13
[connection signal="pressed" from="PlayBoard/MarginContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="EditButton" to="." method="_on_EditButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="pressed" from="ShareButton" to="." method="_on_ShareButton_pressed"]
[connection signal="pressed" from="FBButton" to="." method="_on_FBButton_pressed"]
[connection signal="pressed" from="WAButton" to="." method="_on_WAButton_pressed"]
[connection signal="pressed" from="RedditButton" to="." method="_on_RedditButton_pressed"]
